# mcp-gateway-poc

./: README.md  docker-compose.yaml
api-gateway/: Dockerfile  config.yaml  index.js  main.go  package.json  pnpm-lock.yaml
mcp-server/: Dockerfile  package.json  pnpm-lock.yaml  server.js
mcp-server-1/: Dockerfile  README.md  pyproject.toml  server.py
