[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "basic-mcp-server"
version = "1.0.0"
description = "A basic MCP server with HTTP and stdio support"
authors = [{name = "User"}]
requires-python = ">=3.8"
dependencies = [
    "mcp>=0.9.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
]

[project.scripts]
mcp-server = "server:main"

[tool.uv]
dev-dependencies = []